src/lexer/snapshots/python_lsp__lexer__tests__lex_complex_number.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "3.14j" Number(Complex) 0..5,
    "10.j" Number(Complex) 6..10,
    "10j" Number(Complex) 11..14,
    ".001j" Number(Complex) 15..20,
    "1e100j" Number(Complex) 21..27,
    "3.14e-10j" Number(Complex) 28..37,
    "3.14_15_93j" Number(Complex) 38..49,
    "" NewLine 49..49,
]
