src/lexer/snapshots/python_lsp__lexer__tests__lex_decimal_number.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "1_000" Number(Decimal) 0..5,
    "12" Number(Decimal) 6..8,
    "0b1_0_1" Number(Binary) 9..16,
    "0B10" Number(Binary) 17..21,
    "0o0_1_2_3_4_5_6_7" Number(Octal) 22..39,
    "0O01234567" Number(Octal) 40..50,
    "0xABCDEF_0123456789" Number(Hex) 51..70,
    "0X0123456789ABCDEF" Number(Hex) 71..89,
    "" NewLine 89..89,
]
