src/lexer/snapshots/python_lsp__lexer__tests__lex_double_dedent_mac_eol.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, &source)"
---
[
    "def" Keyword(Def) 0..3,
    "foo" Id 4..7,
    "(" OpenParenthesis 7..8,
    ")" CloseParenthesis 8..9,
    ":" Colon 9..10,
    "\r" NewLine 10..11,
    " " Indent 11..12,
    "if" Keyword(If) 12..14,
    "x" Id 15..16,
    ":" Colon 16..17,
    "\r" NewLine 17..18,
    "\r" NonLogicalNewline 18..19,
    "  " Indent 19..21,
    "return" Keyword(Return) 21..27,
    "99" Number(Decimal) 28..30,
    "\r" NewLine 30..31,
    "\r" NonLogicalNewline 31..32,
    "" Dedent 32..32,
    "" Dedent 32..32,
]
