src/lexer/snapshots/python_lsp__lexer__tests__lex_float_number.snap
---
source: src/lexer/mod.rs
expression: "LexerDebug::new(&lexer, source)"
---
[
    "3.14" Number(Float) 0..4,
    "10." Number(Float) 5..8,
    ".001" Number(Float) 9..13,
    "1e100" Number(Float) 14..19,
    "3.14e-10" Number(Float) 20..28,
    "0e0" Number(Float) 29..32,
    "3.14_15_93" Number(Float) 33..43,
    "" NewLine 43..43,
]
